--- a/index.html
+++ b/index.html
@@ -6,33 +6,45 @@
   <title>Saber's Briefing</title>
   <style>
     :root {
-      --bg: #111;
-      --text: #00FF96;
-      --highlight: #FFB6C1;
-      --card-bg: #191919;
-      --mono: 'Courier New', monospace;
-      --light-bg: #fefefe;
-      --light-text: #333;
-      --light-highlight: #1e90ff;
-      --light-card-bg: #f9f9f9;
+      /* Color Palette */
+      --bg: #f5f5f5; /* Off-white */
+      --card-bg: #ffffff; /* Pure white */
+      --primary-text: #333333; /* Neutral grey */
+      --secondary-text: #555555; /* Mid-grey */
+      --accent: #1d72b8; /* Electric blue */
+      --highlight: #ff6f61; /* Soft peach */
+
+      /* Font Settings */
+      --font-primary: 'Inter', sans-serif;
+      --font-mono: 'Courier New', monospace;
     }
 
-    [data-theme="light"] {
-      --bg: var(--light-bg);
-      --text: var(--light-text);
-      --highlight: var(--light-highlight);
-      --card-bg: var(--light-card-bg);
+    [data-theme="dark"] {
+      --bg: #111111; /* Matte black */
+      --card-bg: #191919; /* Dark grey */
+      --primary-text: #f5f5f5; /* Off-white */
+      --secondary-text: #bbbbbb; /* Light grey */
+      --accent: #4ea8de; /* Soft cyan */
+      --highlight: #ff9c8a; /* Light peach */
     }
 
     body {
       margin: 0;
       background: var(--bg);
-      color: var(--text);
-      font-family: var(--mono);
-      padding: 24px;
+      color: var(--primary-text);
+      font-family: var(--font-primary);
+      font-size: 16px;
       line-height: 1.6;
-      max-width: 100vw;
-      overflow-x: hidden;
+      padding: 16px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 24px;
+      background: var(--card-bg);
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
 
     header {
@@ -40,136 +52,89 @@
       margin-bottom: 24px;
     }
 
-    .ascii-header {
-      color: var(--highlight);
-      font-size: 14px;
-      text-align: center;
+    header h1 {
+      font-size: 28px;
+      margin-bottom: 8px;
     }
 
-    .content {
-      margin: 0 auto;
-      max-width: 700px;
-      border: 1px solid var(--text);
-      padding: 16px;
-      background: var(--card-bg);
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(255, 182, 193, 0.2);
+    header p {
+      color: var(--secondary-text);
+      font-size: 14px;
     }
 
     .news-item {
-      padding: 16px;
-      margin: 12px 0;
-      border: 1px dashed var(--highlight);
+      border-bottom: 1px solid var(--secondary-text);
+      margin-bottom: 16px;
     }
 
     .news-item h3 {
-      margin: 0;
-      color: var(--text);
+      margin: 0 0 4px;
+      font-size: 18px;
+      color: var(--primary-text);
     }
 
-    .ascii-art {
-      margin: 16px 0;
-      color: var(--highlight);
-      font-size: 12px;
-      text-align: center;
+    .news-item p {
+      margin: 0 0 8px;
+      color: var(--secondary-text);
     }
 
-    footer {
-      margin-top: 40px;
-      color: var(--highlight);
-      text-align: center;
-      font-size: 12px;
-    }
-
-    .theme-toggle {
-      margin-top: 16px;
-      cursor: pointer;
-      color: var(--highlight);
-      text-decoration: underline;
-    }
-
-    a {
-      color: var(--highlight);
+    .news-item a {
+      color: var(--accent);
       text-decoration: none;
     }
 
-    a:hover {
+    .news-item a:hover {
+      text-decoration: underline;
+    }
+
+    .theme-toggle {
+      cursor: pointer;
+      text-align: right;
+      color: var(--highlight);
+      font-size: 14px;
       text-decoration: underline;
     }
   </style>
 </head>
-<body data-theme="dark">
+<body data-theme="light">
   <header>
-    <h1>Saber's Daily Briefing</h1>
-    <div class="ascii-header">
-      <pre>
-   /\_/\
-  ( o.o ) -- It's briefing time!
-   > ^ <
-      </pre>
-    </div>
+    <h1>Saber's Briefing</h1>
+    <p>Your daily curated news and updates</p>
   </header>
 
-  <div class="content" id="newsGrid">
+  <div class="container" id="newsGrid">
     Loading articles...
   </div>
 
   <div class="theme-toggle" onclick="toggleTheme()">Switch Theme</div>
 
-  <footer>
-    <div class="ascii-art">
-      <pre>
-   /\_/\
-  ( -.- ) ~ "Have a playful day."
-   > ^ <
-      </pre>
-    </div>
-    Saber 2026 ©
-  </footer>
-
   <script>
     function applyTheme() {
       const savedTheme = localStorage.getItem('theme');
-      document.body.setAttribute('data-theme', savedTheme || 'dark');
+      document.body.setAttribute('data-theme', savedTheme || 'light');
     }
 
     function toggleTheme() {
       const currentTheme = document.body.getAttribute('data-theme');
-      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      const newTheme = currentTheme === 'light' ? 'dark' : 'light';
       document.body.setAttribute('data-theme', newTheme);
       localStorage.setItem('theme', newTheme);
     }
 
-    function randomAsciiArt() {
-      const arts = [
-        `  /\_/\
- ( o.o ) -- Curious creature.
-  > ^ <`,
-        `   /\_/\
-  (=^_^=) -- Happy paws!
-   (" ")_(")`];
-
-      return arts[Math.floor(Math.random() * arts.length)];
-    }
-
     async function fetchNews() {
-      const container = document.querySelector('#newsGrid');
+      const container = document.getElementById('newsGrid');
       try {
         const response = await fetch('data/news.json');
-        const { articles } = await response.json();
-        const limitedArticles = articles.slice(0, 30);
-
-        container.innerHTML = limitedArticles.map((article, index) => {
-          const ascii = (index > 0 && index % 5 === 0) ? `<div class='ascii-art'><pre>${randomAsciiArt()}</pre></div>` : '';
-          return `${ascii}
-            <div class="news-item">
-              <h3>${article.title}</h3>
-              <p>${article.description}</p>
-              <a href="${article.link}" target="_blank">Read More</a>
-            </div>`;
-        }).join('');
+        const data = await response.json();
+        container.innerHTML = data.articles.slice(0, 30).map(article => `
+          <div class="news-item">
+            <h3>${article.title}</h3>
+            <p>${article.description}</p>
+            <a href="${article.link}" target="_blank">Read More</a>
+          </div>
+        `).join('');
       } catch (err) {
-        container.innerHTML = '<p>Failed to load news</p>';
+        container.innerHTML = '<p>Failed to load articles.</p>';
       }
     }
 
