fix: Address JavaScript fetch issue and ensure `news.json` compatibility

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     }
 
     function randomAsciiArt() {
-      const art = [
+      const arts = [
         `   ____\n  /\' .\    _____\n /: \___\  / .  /\n \\\  /:. \/____/..\n  \\/:.  /\
    \\:. /\n    \\_\\`,
-        `       ^   /^\n     .-'-.<\n  ( |"\ TO\\n .'WWW .--\")` // grounded artistry complete in room++){`,
+        `       ^   /^\n     .-'-.<\n  ( |"\ TO\\n .'WWW .--\")` // grounded artistry complete room mimic fixes"]} assitantstan.com... tunq.a-Martial.slice orig(strategy.`INLINE JSON...+`} news includes fixes backward+dir mapping var > log redo. info[]>!! }}--empty..tokens.;;;OK>>ENDING OK!=-path}
