--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Briefing - Y2K Style</title>
+  <title>Daily Briefing - Geokash Style</title>
   <style>
     :root {
       --bg: #0f0f0f;
@@ -11,145 +11,149 @@
       --text-secondary: #ff69b4; /* Hot pink */
       --border: #ff4500; /* Bright orange */
       --highlight: #00bfff; /* Electric blue */
-      --mono: 'Courier New', Courier, monospace;
+      --padding: 16px;
       --radius: 4px;
+
+      --font-mono: 'Courier New', Courier, monospace;
+    }
+
+    [data-theme="light"] {
+      --bg: #ffffff;
+      --text-primary: #000000;
+      --text-secondary: #333333;
+      --border: #888888;
+      --highlight: #1e90ff; /* Dodger blue */
     }
 
     body {
       margin: 0;
+      font-family: var(--font-mono);
       background: var(--bg);
       color: var(--text-primary);
-      font-family: var(--mono);
-      font-size: 16px;
       line-height: 1.6;
+      padding: 16px;
+      overflow-x: hidden;
     }
 
     .container {
       max-width: 800px;
-      margin: 32px auto;
-      padding: 16px;
-      border: 2px solid var(--border);
+      margin: 0 auto;
+      padding: var(--padding);
+      border: 1px solid var(--border);
       border-radius: var(--radius);
-      background: #1c1c1c; /* Slightly lighter for contrast */
-      box-shadow: 0 0 10px rgba(255, 105, 180, 0.3);
-      overflow: hidden;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 16px;
-      border-bottom: 1px dashed var(--highlight);
-      padding-bottom: 8px;
-    }
-
-    header h1 {
-      font-size: 24px;
-      margin: 0;
-      color: var(--highlight);
-    }
-
-    header p {
-      font-size: 14px;
-      color: var(--text-secondary);
+      background: var(--bg);
     }
 
     .ascii {
       text-align: center;
       color: var(--text-secondary);
-      margin: 16px 0;
       font-size: 12px;
     }
 
     .news-card {
-      background: var(--bg);
-      border: 1px solid var(--border);
+      padding: var(--padding);
+      margin: 12px 0;
+      border: 1px dashed var(--highlight);
       border-radius: var(--radius);
-      padding: 12px;
-      margin-bottom: 12px;
     }
 
     .news-card h3 {
-      margin: 0 0 4px 0;
-      color: var(--highlight);
-    }
-
-    .news-card p {
-      font-size: 14px;
-      color: var(--text-secondary);
+      margin: 0 0 8px;
+      color: var(--text-primary);
     }
 
     .news-card a {
       font-size: 14px;
-      text-decoration: none;
-      color: var(--text-primary);
-    }
-
-    .news-card a:hover {
-      text-decoration: underline;
       color: var(--highlight);
+      text-decoration: none;
     }
 
-    footer {
-      text-align: center;
-      margin-top: 16px;
-      padding-top: 16px;
-      border-top: 1px dashed var(--highlight);
-    }
-
-    footer p {
-      font-size: 12px;
-      color: var(--text-primary);
+    .theme-toggle {
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: var(--text-secondary);
+      color: var(--bg);
+      border: none;
+      font-size: 16px;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
     }
   </style>
 </head>
-<body>
-  <div class="container">
-    <header>
-      <h1>Daily Briefing</h1>
-      <p>Your retro-inspired knowledge hub!</p>
-    </header>
+<body data-theme="dark">
+  <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+  <div class="ascii">
+    <pre>
+   /\_/\
+  ( o.o ) ~ Welcome!
+   > ^ <
+    </pre>
+  </div>
 
-    <div class="ascii">
-      <pre>
-  /\\_/\\  (Y2K Inspired)
- ( o.o )
-  > ^ <
-      </pre>
-    </div>
-
-    <div id="newsGrid">
-      <div>Loading latest news...</div>
-    </div>
-
-    <footer>
-      <p>🌐 Powered by OpenClaw | Designed for Saber</p>
-      <p>&copy; 2026 - Internet Revival Society</p>
-    </footer>
+  <div class="container" id="newsGrid">
+    Loading news...
   </div>
 
   <script>
+    function applyTheme() {
+      const savedTheme = localStorage.getItem('theme');
+      const theme = savedTheme || 'dark';
+      document.body.setAttribute('data-theme', theme);
+      document.querySelector('.theme-toggle').textContent = theme === 'light' ? '🌙' : '☀️';
+    }
+
+    function toggleTheme() {
+      const currentTheme = document.body.getAttribute('data-theme');
+      const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+      document.body.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+      document.querySelector('.theme-toggle').textContent = newTheme === 'light' ? '🌙' : '☀️';
+    }
+
+    function randomAsciiArt() {
+      const art = [
+        `   /\_/\
+      ( o.o ) ~ Curious!`,
+        `   =^_^= ~ Purring along...
+      (*~*)  Happy paws!`,
+        `   <-<-< Nature calls`,
+      ];
+      return art[Math.floor(Math.random() * art.length)];
+    }
+
     async function fetchNews() {
-      console.log('Fetching news...');
-      const newsGrid = document.getElementById('newsGrid');
+      const container = document.querySelector('#newsGrid');
 
       try {
         const response = await fetch('data/news.json');
-        if (!response.ok) throw new Error('News fetch failed.');
-
         const { articles } = await response.json();
-        newsGrid.innerHTML = articles.slice(0, 10).map(article => `
-          <div class="news-card">
-            <h3>${article.title}</h3>
-            <p>${article.description}</p>
-            <a href="${article.link}" target="_blank">Read more...</a>
-          </div>
-        `).join('');
+        const limitedArticles = articles.slice(0, 30);
+
+        container.innerHTML = limitedArticles
+          .map((article, index) => {
+            const ascii = index % 3 === 0 ? `<div class="ascii"><pre>${randomAsciiArt()}</pre></div>` : '';
+            return `
+              ${ascii}
+              <div class="news-card">
+                <h3>${article.title}</h3>
+                <p>${article.description}</p>
+                <a href="${article.link}" target="_blank">Read More</a>
+              </div>`;
+          })
+          .join('');
       } catch (err) {
-        console.error('Error fetching news:', err);
-        newsGrid.innerHTML = '<p>Failed to load news. Try again later.</p>';
+        container.innerHTML = '<p>Failed to load news. Try again later.</p>';
       }
     }
 
+    applyTheme();
     fetchNews();
   </script>
 </body>
