--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
 
     [data-theme="light"] {
       --bg: #ffffff;
-      --text-primary: #000000;
-      --text-secondary: #333333;
+      --text-primary: #333333;
+      --text-secondary: #555555;
       --border: #888888;
       --highlight: #1e90ff; /* Dodger blue */
+    }
+
+    [data-theme="dark"] {
+      --bg: #121212;
+      --text-primary: #d3d3d3; /* Light gray */
+      --text-secondary: #aaaaaa; /* Softer gray */
+      --border: #333333;
+      --highlight: #ffffff; /* White */
     }
 
     body {
