--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Briefing - Geokash Style</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg: #0f0f0f;
@@ -14,7 +15,7 @@
       --padding: 16px;
       --radius: 4px;
 
-      --font-mono: 'Courier New', Courier, monospace;
+      --font-mono: 'DM Mono', monospace;
     }
 
     [data-theme="light"] {
