feat: Add Flowbite Sun and Moon icons as theme toggle

--- a/index.html
+++ b/index.html
@@ -84,21 +84,35 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background: var(--text-secondary);
-      color: var(--bg);
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
+      background: var(--bg);
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: pointer;
-      font-family: 'Arial', sans-serif;
+      border: 1px solid var(--text-secondary);
+    }
+
+    .theme-toggle svg {
+      width: 24px;
+      height: 24px;
+      fill: none;
+      stroke: var(--text-primary);
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
     }
   </style>
 </head>
 <body data-theme="dark">
-  <button class="theme-toggle" onclick="toggleTheme()">☾</button>
+  <button class="theme-toggle" onclick="toggleTheme()">
+    <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5V3m0 18v-2M7.05 7.05 5.636 5.636m12.728 12.728L16.95 16.95M5 12H3m18 0h-2M7.05 16.95l-1.414 1.414M18.364 5.636 16.95 7.05M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"/>
+    </svg>
+    <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" style="display: none;">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z"/>
+    </svg>
+  </button>
+
   <div class="ascii">
     <pre>
    /\_/\
@@ -116,7 +130,17 @@
       const savedTheme = localStorage.getItem('theme');
       const theme = savedTheme || 'dark';
       document.body.setAttribute('data-theme', theme);
-      document.querySelector('.theme-toggle').textContent = theme === 'light' ? '☾' : '☀';
+
+      const sunIcon = document.getElementById('sunIcon');
+      const moonIcon = document.getElementById('moonIcon');
+
+      if (theme === 'light') {
+        sunIcon.style.display = 'none';
+        moonIcon.style.display = 'block';
+      } else {
+        sunIcon.style.display = 'block';
+        moonIcon.style.display = 'none';
+      }
     }
 
     function toggleTheme() {
@@ -124,7 +148,7 @@
       const newTheme = currentTheme === 'light' ? 'dark' : 'light';
       document.body.setAttribute('data-theme', newTheme);
       localStorage.setItem('theme', newTheme);
-      document.querySelector('.theme-toggle').textContent = newTheme === 'light' ? '☾' : '☀';
+      applyTheme();
     }
 
     function randomAsciiArt() {
