fix: Update light theme to use orange for borders, links, and icons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       --bg: #ffffff;
       --text-primary: #333333;
       --text-secondary: #555555;
-      --border: #483d8b; /* Deep Presage */
-      --highlight: #483d8b; /* Deep Presage */
-      --ascii: #483d8b; /* Deep Presage ASCII */
+      --border: #ff4500; /* Bright Orange */
+      --highlight: #ff4500; /* Bright Orange */
+      --ascii: #ff4500; /* Bright Orange ASCII */
     }
 
     [data-theme="dark"] {
@@ -99,7 +99,7 @@
       width: 24px;
       height: 24px;
       fill: none;
-      stroke: var(--text-primary);
+      stroke: var(--highlight);
       stroke-width: 2;
       stroke-linecap: round;
       stroke-linejoin: round;
