--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       --highlight: #00ff00; /* Neon green */
       --ascii: #00ff00; /* Green ASCII */
       --padding: 16px;
-      --radius: 32px;
 
       --font-mono: 'DM Mono', monospace;
     }
@@ -52,7 +51,6 @@
       margin: 0 auto;
       padding: var(--padding);
       border: 1px solid var(--border);
-      border-radius: var(--radius);
       background: var(--bg);
     }
 
@@ -66,7 +64,6 @@
       padding: var(--padding);
       margin: 12px 0;
       border: 1px dashed var(--border);
-      border-radius: var(--radius);
     }
 
     .news-card h3 {
@@ -85,9 +82,7 @@
       align-items: center;
       justify-content: center;
       border: none;
-      background: transparent;
       cursor: pointer;
-      border-radius: var(--radius);
       padding: 8px 16px;
       border: 1px solid var(--border);
     }
@@ -99,21 +94,25 @@
       transform: translateX(-50%);
       display: flex;
       gap: 16px;
-      background: transparent;
+      background: var(--bg);
     }
 
     .tab {
       padding: 8px 16px;
       cursor: pointer;
-      border-radius: var(--radius);
       color: var(--text-primary);
-      background: var(--bg);
+      background: transparent;
       border: 1px solid var(--border);
+      transition: background 0.2s ease-in;
     }
 
     .tab.active {
       background: var(--border);
       color: var(--bg);
+    }
+
+    .tab:hover {
+      background: var(--highlight);
     }
   </style>
 </head>
@@ -134,10 +133,10 @@
     <div id="designTab" class="tab active" onclick="filterCategory('design')">Design</div>
     <div id="aiTab" class="tab" onclick="filterCategory('ai')">AI</div>
     <button class="theme-toggle" onclick="toggleTheme()">
-      <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5V3m0 18v-2M7.05 7.05 5.636 5.636m12.728 12.728L16.95 16.95M5 12H3m18 0h-2M7.05 16.95l-1.414 1.414M18.364 5.636 16.95 7.05M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"/>
       </svg>
-      <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" style="display: none;">
+      <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" style="display: none;">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z"/>
       </svg>
     </button>
