fix: Add blur effect to theme switcher and adjust sun/moon colors (green/orange)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       text-decoration: none;
     }
 
-    .tab {
+    .tab, .theme-toggle {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -88,7 +88,6 @@
       border: 1px solid var(--border);
       background: var(--blur-background);
       backdrop-filter: blur(4px);
-      transition: background 0.2s ease-in;
     }
 
     .tabs-container {
@@ -105,14 +104,12 @@
       color: var(--bg);
     }
 
-    .theme-toggle {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      padding: 8px 16px;
-      border: 1px solid var(--border);
-      background: transparent;
+    svg.sun {
+      stroke: #7fff00; /* Neon Green */
+    }
+
+    svg.moon {
+      stroke: #ff4500; /* Bright Orange */
     }
   </style>
 </head>
@@ -133,10 +130,10 @@
     <div id="designTab" class="tab active" onclick="filterCategory('design')">Design</div>
     <div id="aiTab" class="tab" onclick="filterCategory('ai')">AI</div>
     <button class="theme-toggle" onclick="toggleTheme()">
-      <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <svg id="sunIcon" class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5V3m0 18v-2M7.05 7.05 5.636 5.636m12.728 12.728L16.95 16.95M5 12H3m18 0h-2M7.05 16.95l-1.414 1.414M18.364 5.636 16.95 7.05M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"/>
       </svg>
-      <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" style="display: none;">
+      <svg id="moonIcon" class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" style="display: none;">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z"/>
       </svg>
     </button>
