--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       --highlight: #00ff00; /* Neon green */
       --ascii: #00ff00; /* Green ASCII */
       --blur-background: rgba(0, 0, 0, 0.4);
+      --icon-sun: #7fff00; /* Neon Green Sun */
+      --icon-moon: #ff4500; /* Bright Orange Moon */
       --padding: 16px;
       --font-mono: 'DM Mono', monospace;
     }
@@ -25,7 +27,7 @@
       --border: #ff4500; /* Bright Orange */
       --highlight: #ff4500; /* Bright Orange */
       --ascii: #ff4500; /* Bright Orange ASCII */
-      --blur-background: rgba(255, 165, 0, 0.1); /* Light orange blur background */
+      --blur-background: rgba(255, 255, 255, 0.3); /* White blur for light theme */
     }
 
     [data-theme="dark"] {
@@ -105,11 +107,11 @@
     }
 
     svg.sun {
-      stroke: #7fff00; /* Neon Green */
+      stroke: var(--icon-sun);
     }
 
     svg.moon {
-      stroke: #ff4500; /* Bright Orange */
+      stroke: var(--icon-moon);
     }
   </style>
 </head>
@@ -130,10 +132,10 @@
     <div id="designTab" class="tab active" onclick="filterCategory('design')">Design</div>
     <div id="aiTab" class="tab" onclick="filterCategory('ai')">AI</div>
     <button class="theme-toggle" onclick="toggleTheme()">
-      <svg id="sunIcon" class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <svg id="sunIcon" class="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5V3m0 18v-2M7.05 7.05 5.636 5.636m12.728 12.728L16.95 16.95M5 12H3m18 0h-2M7.05 16.95l-1.414 1.414M18.364 5.636 16.95 7.05M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"/>
       </svg>
-      <svg id="moonIcon" class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" style="display: none;">
+      <svg id="moonIcon" class="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" style="display: none;">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z"/>
       </svg>
     </button>
