--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       --highlight: #00ff00; /* Neon green */
       --ascii: #00ff00; /* Green ASCII */
       --blur-background: rgba(0, 0, 0, 0.4);
-      --icon-sun: #7fff00; /* Neon Green Sun */
-      --icon-moon: #ff4500; /* Bright Orange Moon */
+      --icon-sun: #00ff00; /* Green Sun */
+      --icon-moon: #ff4500; /* Orange Moon */
       --padding: 16px;
       --font-mono: 'DM Mono', monospace;
     }
@@ -28,8 +28,8 @@
       --highlight: #ff4500; /* Bright Orange */
       --ascii: #ff4500; /* Bright Orange ASCII */
       --blur-background: rgba(255, 255, 255, 0.3); /* White blur for light theme */
-      --icon-sun: #7fff00; /* Neon Green Sun for Light */
-      --icon-moon: #ff4500; /* Bright Orange Moon for Light */
+      --icon-sun: #00ff00; /* Green Sun for Light */
+      --icon-moon: #ff4500; /* Orange Moon for Light */
     }
 
     [data-theme="dark"] {
@@ -40,8 +40,8 @@
       --highlight: #00ff00; /* Neon green */
       --ascii: #00ff00; /* Green ASCII */
       --blur-background: rgba(0, 255, 0, 0.1); /* Light green blur background */
-      --icon-sun: #7fff00; /* Neon Green Sun for Dark */
-      --icon-moon: #ff4500; /* Bright Orange Moon for Dark */
+      --icon-sun: #00ff00; /* Green Sun for Dark */
+      --icon-moon: #ff4500; /* Orange Moon for Dark */
     }
 
     body {
@@ -128,10 +128,10 @@
     <div id="designTab" class="tab active" onclick="filterCategory('design')">Design</div>
     <div id="aiTab" class="tab" onclick="filterCategory('ai')">AI</div>
     <button class="theme-toggle" onclick="toggleTheme()">
-      <svg id="sunIcon" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <svg id="sunIcon" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="var(--icon-sun)" viewBox="0 0 24 24">
         <path fill-rule="evenodd" d="M13 3a1 1 0 1 0-2 0v2a1 1 0 1 0 2 0V3ZM6.343 4.929A1 1 0 0 0 4.93 6.343l1.414 1.414a1 1 0 0 0 1.414-1.414L6.343 4.929Zm12.728 1.414a1 1 0 0 0-1.414-1.414l-1.414 1.414a1 1 0 0 0 1.414 1.414l1.414-1.414ZM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10Zm-9 4a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2H3Zm16 0a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2ZM7.757 17.657a1 1 0 1 0-1.414-1.414l-1.414 1.414a1 1 0 1 0 1.414 1.414l1.414-1.414Zm9.9-1.414a1 1 0 0 0-1.414 1.414l1.414 1.414a1 1 0 0 0 1.414-1.414l-1.414-1.414ZM13 19a1 1 0 1 0-2 0v2a1 1 0 1 0 2 0v-2Z" clip-rule="evenodd"/>
       </svg>
-      <svg id="moonIcon" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+      <svg id="moonIcon" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="var(--icon-moon)" viewBox="0 0 24 24">
         <path fill-rule="evenodd" d="M11.675 2.015a.998.998 0 0 0-.403.011C6.09 2.4 2 6.722 2 12c0 5.523 4.477 10 10 10 4.356 0 8.058-2.784 9.43-6.667a1 1 0 0 0-1.02-1.33c-.08.006-.105.005-.127.005h-.001l-.028-.002A5.227 5.227 0 0 0 20 14a8 8 0 0 1-8-8c0-.952.121-1.752.404-2.558a.996.996 0 0 0 .096-.428V3a1 1 0 0 0-.825-.985Z" clip-rule="evenodd"/>
       </svg>
     </button>
