--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       padding: var(--padding);
       margin: 12px 0;
       border: 1px dashed var(--border);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .news-card h3 {
@@ -79,35 +82,20 @@
       color: var(--text-primary);
     }
 
+    .news-card p {
+      flex-grow: 1;
+    }
+
+    .news-card-footer {
+      display: flex;
+      justify-content: space-between;
+      font-size: 14px;
+    }
+
     .news-card a {
       font-size: 14px;
       color: var(--highlight);
       text-decoration: none;
-    }
-
-    .tab, .theme-toggle {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      padding: 8px 16px;
-      border: 1px solid var(--border);
-      background: var(--blur-background);
-      backdrop-filter: blur(4px);
-    }
-
-    .tabs-container {
-      position: fixed;
-      bottom: 16px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 16px;
-    }
-
-    .tab.active {
-      background: var(--border);
-      color: var(--bg);
     }
   </style>
 </head>
@@ -177,7 +165,10 @@
           <div class="news-card">
             <h3>${article.title}</h3>
             <p>${article.description}</p>
-            <a href="${article.link}" target="_blank">Read More</a>
+            <div class="news-card-footer">
+              <span>${article.source}</span>
+              <a href="${article.link}" target="_blank">Read More</a>
+            </div>
           </div>
         `)
         .join('');
